--- a/apps/web/app/app.css
+++ b/apps/web/app/app.css
@@ -13,7 +13,8 @@
   /* --color-base-content: oklch(20% 0.05 240); */
   --color-primary: oklch(55% 0.3 240);
   --color-primary-content: oklch(98% 0.01 240);
-  --color-secondary: oklch(70% 0.25 200);
+  /* --color-secondary: oklch(70% 0.25 200); */
+  --color-secondary: rgba(126, 96, 1, 1);
   --color-secondary-content: oklch(98% 0.01 200);
   /* --color-accent: oklch(65% 0.25 160); */
   --color-accent: #7E6001;
