--- a/apps/web/app/app.css
+++ b/apps/web/app/app.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
+@plugin "@tailwindcss/typography";
 @plugin "daisyui";
+
 @plugin "daisyui/theme" {
   name: "light";
   default: true; /* set as default */
